syntax = "proto3";
package websocket_api;

import "make-payment.proto";
import "create-market.proto";
import "settle-market.proto";
import "create-order.proto";
import "out.proto";

message ClientMessage {
  oneof message {
    CreateMarket create_market = 1;
    SettleMarket settle_market = 2;
    CreateOrder create_order = 3;
    CancelOrder cancel_order = 4;
    Out out = 5;
    MakePayment make_payment = 6;
    Authenticate authenticate = 7;
  }
}
message CancelOrder {
  int64 id = 1;
}
message Authenticate {
  string jwt = 1;
  string id_jwt = 2;
}
