syntax = "proto3";
package websocket_api;

message MarketSettled {
  string id = 1;
  string settle_price = 2;
}
