syntax = "proto3";
package websocket_api;

import "order.proto";
import "trade.proto";
import "side.proto";

message OrderCreated {
  int64 market_id = 1;
  string user_id = 2;
  optional Order order = 3;
  repeated OrderFill fills = 4;
  repeated Trade trades = 5;

  message OrderFill {
    int64 id = 1;
    int64 market_id = 2;
    string owner_id = 3;
    string size_filled = 4;
    string size_remaining = 5;
    string price = 6;
    Side side = 7;
  }
}

