syntax = "proto3";
package websocket_api;

import "portfolio.proto";
import "market.proto";
import "market-settled.proto";
import "orders-cancelled.proto";
import "order-created.proto";
import "transfer.proto";
import "transfers.proto";
import "request-failed.proto";
import "out.proto";
import "account.proto";
import "accounts.proto";
import "redeem.proto";
import "orders.proto";
import "trades.proto";
import "transactions.proto";

message ServerMessage {
  string request_id = 19;
  oneof message {
    Portfolio portfolio = 1;
    Market market = 2;
    MarketSettled market_settled = 4;
    OrderCreated order_created = 5;
    OrdersCancelled orders_cancelled = 6;
    Transfers transfers = 7;
    Transfer transfer_created = 8;
    Out out = 9;
    Authenticated authenticated = 10;
    RequestFailed request_failed = 11;
    Account account_created = 12;
    Accounts accounts = 13;
    ActingAs acting_as = 14;
    Ownership ownership_received = 15;
    Ownerships ownerships = 16;
    OwnershipGiven ownership_given = 17;
    Redeemed redeemed = 18;
    Orders orders = 20;
    Trades trades = 21;
    Transactions transactions = 22;
  }
}
message Authenticated {
  int64 account_id = 1;
}
message ActingAs {
  int64 account_id = 1;
}
message Ownership {
  int64 owner_id = 1;
  int64 account_id = 2;
  double credit = 3;
}
message Ownerships {
  repeated Ownership ownerships = 1;
}
message OwnershipGiven {}
